--- a/index.html
+++ b/index.html
@@ -67,12 +67,17 @@
 						<label for="email">Comment:</label>
 						<input id="comment" type="comment" placeholder="Your comment" /> <br>
 
-						<input type="submit" onclick="submitComment()" />
+						<input type="submit"/>
 					</form>
 				</div>
 
 			<script src="js/jquery-1.12.1.js" type="text/javascript"></script>
 			<script src="js/javascript.js" type="text/javascript"></script>
+		<div>
+			<h2 class="green">Comment:</h2>
+			<ul id="comments">No Comments</ul>
+		</div>
+
 		</body>
 </html>
 
